--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -28,7 +28,7 @@ layout: compress
         <h1 class="hero__title">{{ page.title }}</h1>
         <p class="hero__meta">
             <span>
-              <time>{{ page.date | date_to_string }}</time>&nbsp;
+              <time>{{ page.date }}</time>&nbsp;
             </span>
           <span>
               {% assign words = content | number_of_words %}
