chore: changing the text organization on the pages

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,13 +21,15 @@ layout: compress
     <div class="hero lazyload" data-bg="{{site.url}}/assets/img/posts/sleek_lg.jpg">
       <div class="hero__wrap">
         <h1 class="hero__title">IT.BR Australia</h1>
-        <p class="hero__meta">Nós somos o ITBR Australia, uma comunidade de brazileiros que trabalham em TI na Austrália e tem como objetivo reunir os brazucas que estão aqui ou que estão se planejando em migrar para cá.</p>
-        <p class="hero__meta">Nosso objetivo é difundir conhecimento sobre os passos para imigração e também realizar eventos tecnicos para reunir a comunidade.</p>
       </div>
     </div>
-
+    
     <main class="site__content">
-      <section class="blog">
+      <section class="container">
+          <br/><br/>
+          <p class="hero__meta">Nós somos o ITBR Australia, uma comunidade de brazileiros que trabalham em TI na Austrália e tem como objetivo reunir os brazucas que estão aqui ou que estão se planejando em migrar para cá.</p>
+          <p class="hero__meta">Nosso objetivo é difundir conhecimento sobre os passos para imigração e também realizar eventos tecnicos para reunir a comunidade.</p>
+          <br/><br/>
       </section>
     </main>
 
