chore: changing the text organization on the homepage

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,12 +25,12 @@ layout: compress
     </div>
     
     <main class="site__content">
-      <section class="container">
-          <br/><br/>
-          <p class="hero__meta">Nós somos o ITBR Australia, uma comunidade de brazileiros que trabalham em TI na Austrália e tem como objetivo reunir os brazucas que estão aqui ou que estão se planejando em migrar para cá.</p>
-          <p class="hero__meta">Nosso objetivo é difundir conhecimento sobre os passos para imigração e também realizar eventos tecnicos para reunir a comunidade.</p>
-          <br/><br/>
-      </section>
+      <div class="container">
+        <div class="page-content">
+          <p>Nós somos o ITBR Australia, uma comunidade de brazileiros que trabalham em TI na Austrália e tem como objetivo reunir os brazucas que estão aqui ou que estão se planejando em migrar para cá.</p>
+          <p>Nosso objetivo é difundir conhecimento sobre os passos para imigração e também realizar eventos tecnicos para reunir a comunidade.</p>
+        </div>
+      </div>
     </main>
 
     {% include footer.html %}
