--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,7 +27,7 @@ layout: compress
     <main class="site__content">
       <div class="container">
         <div class="page-content">
-          <p>Nós somos o ITBR Australia, uma comunidade de brasileiros que trabalham em TI na Austrália e tem como objetivo reunir os brazucas que estão aqui ou que estão se planejando em migrar para cá.</p>
+          <p>Nós somos o ITBR Australia, uma comunidade de brasileiros que trabalham em TI na Austrália e temos como objetivo reunir os brazucas que estão aqui ou que estão se planejando em migrar para cá.</p>
           <p>Nosso objetivo é difundir conhecimento sobre os passos para imigração e também realizar eventos tecnicos para reunir a comunidade.</p>
         </div>
       </div>
