fix: fixing post list images

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,7 +5,7 @@
         <div class="header__logo--container">
           <figure>
             <img
-              src="{{site.url}}/assets/img/posts/{{post.featured-img}}_placehold.jpg",
+              src="{{site.url}}/assets/img/small_logo.jpg",
               data-srcset="{{site.url}}/assets/img/small_logo.jpg, {{site.url}}/assets/img/small_logo.jpg"
               class="lazyload blur"
               alt="IT.BR Australia"
