--- a/_includes/card.html
+++ b/_includes/card.html
@@ -1,4 +1,4 @@
-<a class="post-card" href="{{ post.url | relative_url }}" itemprop="blogPosts" itemscope="" itemtype="http://schema.org/BlogPosting">
+<a class="post-card" href="{{ post.url | relative_url }}" itemprop="blogPosts" itemscope="" itemtype="https://schema.org/BlogPosting">
   {% if post.featured-img %}
   <figure class="post-card__thumb">
     <img
