--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -27,7 +27,7 @@ layout: compress
     <main class="site__content">
       <section class="blog">
         <div class="container">
-          <div class="post-list" itemscope="" itemtype="http://schema.org/Blog">
+          <div class="post-list" itemscope="" itemtype="https://schema.org/Blog">
 
             {% for post in site.posts %}
               {% include card.html %}
