--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -58,7 +58,7 @@ layout: compress
           <span>Previous</span>
           <a href="{{page.previous.url | relative_url }}">
                 <span>
-                  <svg xmlns="http://www.w3.org/2000/svg" width="6" height="11">
+                  <svg xmlns="https://www.w3.org/2000/svg" width="6" height="11">
                     <path fill="fillColor" d="M5.647 1.718c.37-.434.323-1.09-.106-1.465A1.016 1.016 0 0 0 4.095.36L.25 4.875a1.05 1.05 0 0 0 .017 1.378l3.95 4.407c.38.424 1.03.456 1.448.07a1.05 1.05 0 0 0 .07-1.468l-3.34-3.725 3.253-3.819z"/>
                   </svg>
               </span>
@@ -73,7 +73,7 @@ layout: compress
           <a href="{{page.next.url | relative_url }}">
             {{page.next.title | strip_html | truncate: 30}}
             <span>
-                <svg xmlns="http://www.w3.org/2000/svg" width="6" height="11">
+                <svg xmlns="https://www.w3.org/2000/svg" width="6" height="11">
                   <path fill="#fillColor" d="M.353 9.282c-.37.434-.323 1.09.106 1.465a1.016 1.016 0 0 0 1.446-.107L5.75 6.125a1.05 1.05 0 0 0-.017-1.378L1.784.34A1.015 1.015 0 0 0 .336.27a1.05 1.05 0 0 0-.07 1.468l3.34 3.725L.353 9.282z"/>
                 </svg>
               </span>
