--- a/_sass/base/_helpers.scss
+++ b/_sass/base/_helpers.scss
@@ -1,6 +1,6 @@
 .blur {
   background: $bg-color;
-  filter: url('data:image/svg+xml;charset=utf-8,<svg xmlns="http://www.w3.org/2000/svg"><filter id="filter"><feGaussianBlur stdDeviation="16" /></filter></svg>#filter');
+  filter: url('data:image/svg+xml;charset=utf-8,<svg xmlns="https://www.w3.org/2000/svg"><filter id="filter"><feGaussianBlur stdDeviation="16" /></filter></svg>#filter');
   -webkit-filter: blur(1rem);
   filter: blur(1rem);
   transition: filter 400ms, -webkit-filter 400ms;
